# QHash

./: .gitignore  CMakeLists.txt  QHash.pro  README.md  common.h  droparea.cpp  droparea.h  hasher.cpp  hasher.h  mainwindow.cpp  mainwindow.h
test-QHash/: test-QHash.pro  tst_test0.cpp
